tests/baselines/reference/tsxStatelessFunctionComponentsWithTypeArguments3.errors.txt
tests/cases/conformance/jsx/file.tsx(9,33): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/jsx/file.tsx(10,33): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/jsx/file.tsx(11,33): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/jsx/file.tsx(12,33): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/jsx/file.tsx(14,33): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/jsx/file.tsx(15,33): error TS2698: Spread types may only be created from object types.


==== tests/cases/conformance/jsx/file.tsx (6 errors) ====
    import React = require('react')
    
    declare function OverloadComponent<U>(): JSX.Element;
    declare function OverloadComponent<U>(attr: {b: U, a?: string, "ignore-prop": boolean}): JSX.Element;
    declare function OverloadComponent<T, U>(attr: {b: U, a: T}): JSX.Element;
    
    // OK
    function Baz<T extends {b: number}, U extends {a: boolean, b:string}>(arg1: T, arg2: U) {
        let a0 = <OverloadComponent {...arg1} a="hello" ignore-prop />;
                                    ~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
        let a1 = <OverloadComponent {...arg2} ignore-pro="hello world" />;
                                    ~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
        let a2 = <OverloadComponent {...arg2} />;
                                    ~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
        let a3 = <OverloadComponent {...arg1} ignore-prop />;
                                    ~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
        let a4 = <OverloadComponent />;
        let a5 = <OverloadComponent {...arg2} ignore-prop="hello" {...arg1} />;
                                    ~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
        let a6 = <OverloadComponent {...arg2} ignore-prop {...arg1} />;
                                    ~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    }
    
    declare function Link<U>(l: {func: (arg: U)=>void}): JSX.Element;
    declare function Link<U>(l: {func: (arg1:U, arg2: string)=>void}): JSX.Element;
    function createLink(func: (a: number)=>void) {
        let o = <Link func={func} />
        let o1 = <Link func={(a:number, b:string)=>{}} />;
    }